--- a/letter_input_counter.html
+++ b/letter_input_counter.html
@@ -25,5 +25,28 @@
     }
   }).mount('#app');
 </script>
+<style type="text/css">
+  #app {
+    background-color: #000000;
+    color: #fff;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 24px;
+  }
+  p {
+    font-size: 24px;
+    color: #c4c5c6;
+    flex-basis: 50%;
+  }
+  input {
+    background-color: #666;
+    color: #fff;
+  }
+  input::focus {
+    border: none;
+  }
+</style>
 </body>
 </html>
