--- a/letter_input_counter.html
+++ b/letter_input_counter.html
@@ -8,13 +8,57 @@
     <script type="text/javascript" src="https://unpkg.com/vue@3"></script>
 </head>
 <body>
+  <style type="text/css">
+  #app {
+    display: grid;
+    place-items: center;
+  }
+  .container {
+    padding: 10px 24px;
+    height: 300px;
+    width: 300px;
+    background-color: #000000;
+    color: #fff;
+    margin: auto auto;
+    border-radius: 10px;
+    overflow: hidden;
+  }
+  p {
+    font-size: 24px;
+    color: #c4c5c6;
+    text-emphasis: elipsis;
+  }
+  em {
+    font-size: 15px;
+  }
+  input {
+    background-color: transparent;
+    border-bottom: 2px solid #c0c0c0 !important;
+    border: 0px;
+    color: #c0c0c0;
+    width: 100%;
+    height: 40px;
+  }
+  input:focus {
+    outline: none;
+    font-size: 18px;
+    font-weight: 600;
+    background-color: #222;
+    color: #eeeeee;
+    border-bottom: 2px solid #eeeeee !important;
+    transition: all ease-in .3s;
+  }
+</style>
 <div id="app">
+  <div class="container">
   <p>
   <input type="text" v-model="greeting">
 </p>
 <p>
-  {{ greeting }} ({{greeting.length}})
+  {{ greeting }} <br>
+<em>({{greeting.length}}) Letters in total </em>
   </p>
+  </div>
 </div>
 <script type="text/javascript">
   Vue.createApp({
@@ -25,28 +69,5 @@
     }
   }).mount('#app');
 </script>
-<style type="text/css">
-  #app {
-    background-color: #000000;
-    color: #fff;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 10px 24px;
-  }
-  p {
-    font-size: 24px;
-    color: #c4c5c6;
-    flex-basis: 50%;
-  }
-  input {
-    background-color: #666;
-    color: #fff;
-  }
-  input::focus {
-    border: none;
-  }
-</style>
 </body>
 </html>
